# reviewability

./: .gitignore  CLAUDE.md  LICENSE  README.md  code_review_cognitive_load.md  pyproject.toml  reviewability.toml  scoring-formula.md  suggested_metrics.md
.claude/: suggested_metrics.md
.claude/commands/: reviewability.md
.github/workflows/: publish.yml
demo_pr/java_example/: Address.java  CapacityPlanner.java  DeliveryQuoteService.java  DeliveryRequest.java  DispatchReviewPolicy.java  PricingPolicy.java  RoutePlan.java
src/reviewability/: analyzer.py  cli.py  diff_reader.py  factory.py  formatter.py  gate.py  git.py
src/reviewability/analysis/: movement.py
src/reviewability/config/: models.py  parser.py  reviewability.toml
src/reviewability/diff/: annotator.py  complex_rewrite.py  enrichment.py  grouper.py  line_filter.py  move_detector.py  movement.py  similarity_calculator.py
src/reviewability/domain/: metric.py  models.py  protocols.py  report.py
src/reviewability/metrics/: base.py  builtin.py  engine.py  registry.py
src/reviewability/metrics/file/: __init__.py  added_lines.py  hunk_count.py  in_place_rewrite_lines.py  is_likely_moved.py  lines_changed.py  max_hunk_lines.py  moved_lines.py  moved_rewrite_lines.py  removed_lines.py
src/reviewability/metrics/group/: __init__.py  edit_complexity.py
src/reviewability/metrics/hunk/: __init__.py  added_lines.py  change_balance.py  churn_ratio.py  context_lines.py  in_place_rewrite_lines.py  interleaving.py  is_likely_moved.py  lines_changed.py  moved_rewrite_lines.py  removed_lines.py
src/reviewability/metrics/move/: __init__.py  edit_complexity.py
src/reviewability/metrics/overall/: __init__.py  added_lines.py  change_entropy.py  churn_complexity.py  edit_complexity.py  files_changed.py  in_place_rewrite_lines.py  largest_file_ratio.py  lines_changed.py  mean_interleaving.py  moved_lines.py  moved_rewrite_lines.py  problematic_file_count.py  problematic_hunk_count.py  problematic_move_count.py  removed_lines.py  scatter_factor.py
src/reviewability/parser/: git.py
src/reviewability/rules/: definitions.py  engine.py
src/reviewability/scoring/: base.py  weighted.py
tests/e2e/: scenarios.md  test_cli.py
tests/e2e/cases/fail_churn_amplifies_size/: diff.patch  expected.json
tests/fixtures/: generate.sh  logic_change.diff  rename_only.diff  tangled_commit.diff
tests/functional/: test_metrics.py  test_parser.py
tests/unit/: test_annotator.py  test_complex_rewrite_detector.py  test_config_models.py  test_config_parser.py  test_domain_models.py  test_domain_report.py  test_enricher.py  test_gate.py  test_grouper.py  test_metrics_registry.py  test_move_detector.py  test_movement_detector.py  test_rules_definitions.py  test_rules_engine.py  test_scoring_weighted.py
tests/unit/diff/: test_similarity_calculator.py
(+88 files in other folders)
