[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewability"
version = "0.1.0"
description = "Analyze code diffs for review cognitive load"
requires-python = ">=3.13"
dependencies = [
    "unidiff>=0.7.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[project.scripts]
reviewability = "reviewability.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
