[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reviewability"
version = "0.3.0"
description = "CI quality gate that scores pull requests by how hard they are to review"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Kirill Volkov" },
]
keywords = [
    "code-review",
    "pull-request",
    "diff",
    "ci-cd",
    "quality-gate",
    "metrics",
    "code-quality",
    "git",
    "developer-tools",
    "code-analysis",
    "diff-analysis",
    "reviewability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "unidiff>=0.7.5",
]

[project.urls]
Homepage = "https://github.com/Kirvolque/reviewability"
Repository = "https://github.com/Kirvolque/reviewability"
Issues = "https://github.com/Kirvolque/reviewability/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "build>=1.0",
    "twine>=5.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[project.scripts]
reviewability = "reviewability.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"reviewability.config" = ["reviewability.toml"]
